--- a/whatslab/src/styles/principal.css
+++ b/whatslab/src/styles/principal.css
@@ -1,151 +1,184 @@
 * {
-    margin: 0;
-    padding: 0;
-  }
-  body,
-  html {
-    background-color: #141f29;
-    height: 100vh;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: #141f29;
+  height: 50vh;
+  box-sizing: border-box;
+}
+.page-container {
+  font-family: "Roboto", sans-serif;
+  display: grid;
+  grid-template-rows: 5vw 73vh 5vw;
+  margin-left: 10vw;
+  margin-right: 10vw;
+  height: 100%;
+  box-shadow: 1px 1px 10px #a39d9d34;
+}
+
+header {
+  background-color: #42c0a6;
+  color: antiquewhite;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding-left: 10px;
+}
+
+header img {
+  width: 24px;
+  height: 24px;
+  margin-right: 20px;
+  margin-left: 20px;
+}
+main {
+  box-sizing: border-box;
+  background-image: url("../img/chat-wallpaper.png");
+  background-size: cover;
+  display: flex;
+  flex-direction: column-reverse;
+  overflow: auto;
+  padding: 10px;
+}
+
+main > ul {
+  align-self: flex-end;
+  width: 100%;
+}
+
+main > span {
+  color: rgb(192, 190, 190);
+  font-size: 16px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  position: fixed;
+}
+
+.container-de-bubbles {
+  width: 25vw;
+}
+
+footer {
+  background-color: #141f29;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 50px;
+  box-shadow: 0 1px 10px #203242;
+}
+
+form {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  min-width: 50%;
+}
+
+input {
+  height: 40px;
+  border-radius: 10px;
+  text-align: center;
+  border: none;
+  outline: none;
+}
+
+.area-de-mensagem {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: white;
+  width: 75%;
+  border-radius: 10px;
+  min-width: 300px;
+}
+#mensagem {
+  width: 90%;
+}
+#nome {
+  border-radius: 10px;
+  width: 20%;
+}
+
+button {
+  width: 50px;
+  height: 40px;
+  background-color: white;
+  border: none;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+button > img {
+  width: 25px;
+  height: 25px;
+}
+
+button:hover {
+  background-color: rgba(0, 0, 255, 0.185);
+  transition: all .2s;
+}
+
+button:not(:hover) {
+  transition: all .2s;
+}
+
+@media screen and (max-width: 700px) {
+  body {
+    min-width: 400px;
   }
   .page-container {
-    font-family: "Roboto", sans-serif;
+    margin: 0;
+    padding: 0;
     display: grid;
-    grid-template-rows: 5vw 1fr 5vw;
-    margin-left: 10vw;
-    margin-right: 10vw;
-    height: 95%;
-    box-shadow: 1px 1px 10px #a39d9d34;
-  }
-  
+    grid-template-rows: 60px 67vh;
+    }
   header {
-    background-color: #42c0a6;
-    color: antiquewhite;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    padding-left: 10px;
-  }
-  
-  header img {
-    width: 24px;
-    height: 24px;
-    margin-right: 20px;
-    margin-left: 20px;
+    height: 60px;
   }
   main {
-    background-image: url("img/chat-wallpaper.png");
-    background-size: cover;
+    height: 80vh;
+    padding-bottom: 50px;
+    box-sizing: border-box;
   }
-  
+
   footer {
-    background-color: #141f29;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 50px;
-    box-shadow: 0 1px 10px #203242;
+    height: 120px;
+    padding: 0;
+    margin-bottom: 0;
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
   }
-  
+
   form {
     display: flex;
-    justify-content: space-between;
-    width: 100%;
-    min-width: 50%;
-  }
-  
-  input {
-    height: 40px;
-    border-radius: 10px;
-    text-align: center;
-    border: none;
-    outline: none;
-  }
-  
-  .area-de-mensagem {
-    display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    justify-content: space-between;
-    background-color: white;
-    width: 75%;
-    border-radius: 10px;
-    min-width: 300px;
   }
+
   #mensagem {
     width: 90%;
   }
   #nome {
     border-radius: 10px;
-    width: 20%;
+    width: 75%;
+    margin-bottom: 7px;
   }
-  
+
   button {
-    width: 100px;
-    height: 40px;
-    background-color: white;
-    border: none;
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 40px;
+    margin-right: 5px;
   }
-  
-  button > img {
-    width: 25px;
-    height: 25px;
+
+  header,
+  main,
+  footer,
+  body {
+    min-width: 400px;
   }
-  
-  button:hover {
-    background-color: rgba(0, 0, 255, 0.185);
-    transition: all 1s;
-  }
-  
-  button:not(:hover) {
-    transition: all 1s;
-  }
-  
-  @media screen and (max-width: 700px) {
-    body,html{
-      min-width: 400px;
-    }
-    .page-container {
-      margin: 0;
-      padding: 0;
-      display: grid;
-      grid-template-rows: 1fr 1fr 1fr;
-      height: 100%;
-    }
-    header {
-      height: 60px;
-    }
-    main {
-      height: 75vh;
-    }
-  
-    footer {
-      padding: 0;
-      margin: 0;
-      height: 120px;
-    }
-  
-    form {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
-  
-    #mensagem {
-      width: 90%;
-    }
-    #nome {
-      border-radius: 10px;
-      width: 75%;
-      margin-bottom: 7px;
-    }
-  
-    button {
-      width: 40px;
-      margin-right: 5px;
-    }
-  }
+}
