Reestruturaçao do layout para styled components

--- a/whatslab/src/backup/styles/principal.css
+++ b/whatslab/src/backup/styles/principal.css
@@ -1,3 +1,7 @@
+/* ESTE ARQUIVO NÃO FUNCIONA MAIS. MANTIVE APENAS COMO BACKUP */
+
+
+/* OS ESTILOS "*" E "body" FORAM TRANSFERIDOS PARA UM STYLED COMPONENT GlobalStyle NO ARQUIVO APP.JS */
 * {
   margin: 0;
   padding: 0;
