--- a/whatslab/src/backup/styles/principal.css
+++ b/whatslab/src/backup/styles/principal.css
@@ -129,7 +129,7 @@ button:not(:hover) {
   transition: all .2s;
 }
 
-@media screen and (max-width: 700px) {
+@media (width: 375px) {
   body {
     min-width: 400px;
   }
